--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formkit/tempo": "^0.0.15",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,10 +11,15 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.2",
     "typescript": "^4.4.2",
+    "use-chrome-storage": "^1.3.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.0",
     "webextension-polyfill": "^0.10.0"
   },
@@ -42,9 +48,12 @@
     ]
   },
   "devDependencies": {
+    "@types/sortablejs": "^1.15.8",
+    "@types/uuid": "^9.0.8",
     "@types/webextension-polyfill": "^0.10.0",
     "customize-cra": "^1.0.0",
     "prettier": "2.8.7",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "sass": "^1.71.1"
   }
 }
