--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,12 +13,11 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
       "js": ["./static/js/content.js"]
     }
   ],
   "action": {
     "default_popup": "index.html"
   },
-  "permissions": ["storage", "tabs", "activeTab"]
+  "permissions": ["storage"]
 }
