--- a/manifest.json
+++ b/manifest.json
@@ -11,12 +11,12 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["*://*/*"],
       "js": ["./static/js/content.js"]
     }
   ],
   "action": {
     "default_popup": "index.html"
   },
-  "permissions": ["storage", "tabs"]
+  "permissions": ["storage", "activeTab"]
 }
